# cathedral-of-shadows

./: .gitignore  CMakeLists.txt  README.md  main.cpp
data/: demons.json
include/: CMakeLists.txt
model/: Demon.hpp
src/: main.cpp
src/model/: Demon.cpp
src/parser/: Parser.cpp  Parser.hpp
